; ModuleID = '/home/carl/AnghaBench/tmux/extr_tty.c_tty_create_log.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_tty.c_tty_create_log.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"tmux-out-%ld.log\00", align 1
@O_WRONLY = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@O_TRUNC = common dso_local global i32 0, align 4
@tty_log_fd = common dso_local global i32 0, align 4
@F_SETFD = common dso_local global i32 0, align 4
@FD_CLOEXEC = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [13 x i8] c"fcntl failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tty_create_log() #0 {
  %1 = alloca [64 x i8], align 16
  %2 = getelementptr inbounds [64 x i8], [64 x i8]* %1, i64 0, i64 0
  %3 = call i64 (...) @getpid()
  %4 = call i32 @xsnprintf(i8* %2, i32 64, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i64 %3)
  %5 = getelementptr inbounds [64 x i8], [64 x i8]* %1, i64 0, i64 0
  %6 = load i32, i32* @O_WRONLY, align 4
  %7 = load i32, i32* @O_CREAT, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @O_TRUNC, align 4
  %10 = or i32 %8, %9
  %11 = call i32 @open(i8* %5, i32 %10, i32 420)
  store i32 %11, i32* @tty_log_fd, align 4
  %12 = load i32, i32* @tty_log_fd, align 4
  %13 = icmp ne i32 %12, -1
  br i1 %13, label %14, label %22

14:                                               ; preds = %0
  %15 = load i32, i32* @tty_log_fd, align 4
  %16 = load i32, i32* @F_SETFD, align 4
  %17 = load i32, i32* @FD_CLOEXEC, align 4
  %18 = call i32 @fcntl(i32 %15, i32 %16, i32 %17)
  %19 = icmp eq i32 %18, -1
  br i1 %19, label %20, label %22

20:                                               ; preds = %14
  %21 = call i32 @fatal(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  br label %22

22:                                               ; preds = %20, %14, %0
  ret void
}

declare dso_local i32 @xsnprintf(i8*, i32, i8*, i64) #1

declare dso_local i64 @getpid(...) #1

declare dso_local i32 @open(i8*, i32, i32) #1

declare dso_local i32 @fcntl(i32, i32, i32) #1

declare dso_local i32 @fatal(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
